vlib/v/checker/tests/modify_const_with_ref.vv
struct Foo {
mut:
	value int
}

const constant = Foo{ 100 }

fn main() {
	mut unused_var := Foo{}
	unused_var = Foo{}
	mut c := &constant
	c.value = 200
}
